--- a/02_Exam_Social_Network/02_Exam_Social_Network/Views/Shared/_LoginPartial.cshtml
+++ b/02_Exam_Social_Network/02_Exam_Social_Network/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using _02_Exam_Social_Network.Data.Entities
+@using DataAccess.Data.Entities
 
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
