--- a/02_Exam_Social_Network/02_Exam_Social_Network/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/02_Exam_Social_Network/02_Exam_Social_Network/Areas/Identity/Pages/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using _02_Exam_Social_Network.Areas.Identity
 @using _02_Exam_Social_Network.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using _02_Exam_Social_Network.Data.Entities
+@using DataAccess.Data.Entities
