--- a/02_Exam_Social_Network/02_Exam_Social_Network/wwwroot/css/site.css
+++ b/02_Exam_Social_Network/02_Exam_Social_Network/wwwroot/css/site.css
@@ -146,14 +146,7 @@ a {
     display: flex;
     flex-direction: row;
 }
-.rightMenu {
-    /*    width: 700px;*/
-    /*        background-color: red;*/
-    margin: 0px;
-    /*    gap: 10px;*/
-    /*display:flex;
-flex-direction:column;*/
-}
+
 .RowDiv {
     display: flex;
     flex-direction:row;
@@ -810,13 +803,34 @@ flex-direction:column;*/
 /*    margin:0px;
     margin-left:100px;*/
 }
+.rightMenu {
+    /*    width: 700px;*/
+/*            background-color: red;*/
+    margin: 0px;
+    display:flex;
+    flex:1;
+    height:500px;
+    flex-direction:column;
 
+    justify-content:flex-start;
+    gap:0;
+    /*    gap: 10px;*/
+    /*display:flex;
+flex-direction:column;*/
+}
 .profileMini
 {
     display:flex;
     flex-direction:row;
 /*    gap:10px;*/
     margin-bottom:10px;
+/*    background-color:red;*/
+    align-items:center;
+/*    flex:1;*/
+
+    width:100%;
+    height:70px;
+    margin-top:30px;
 
 }
 .ImgDivMin
@@ -826,6 +840,7 @@ flex-direction:column;*/
 /*    background-clip:border-box;*/
     overflow:hidden;
     border-radius:50%;
+    
 }
 .ImgMini {
     width: 100%;
@@ -835,15 +850,62 @@ flex-direction:column;*/
 }
 .TextMini {
     font-family: "Venn Medium";
-    margin-left:10px;
-    font-size:14px;
+    /*    margin-left:10px;*/
+    margin: 0;
+    font-size: 14px;
+    color: black;
+}
+.TextMiniBlue {
+    font-family: "Venn Medium";
+/*    margin-left: 10px;*/
+    font-size: 13px;
+/*    font-weight:bold;*/
+margin:0;
+    color: #3143e3;
+}
+.TextRecRow {
+    font-family: "Venn Medium";
+    font-size: 14px;
+    margin: 0;
+    color: #737373;
+}
+.emptyBtn12
+{
+    outline:none;
+    border:0;
+    background-color:transparent;   
+    
 }
 
-.TextMiniDiv {
-    display:flex;
-    justify-content:center;
-    align-items:center;
+.emptyBtn12:hover p {
+    cursor: pointer;
+    text-decoration: underline;
+    /*        color:antiquewhite;*/
+}
 
+    .textRow {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        flex: 1;
+        /*    background-color:black;*/
+        padding: 10px;
+        padding-right: 10%;
+        box-sizing: border-box;
+    }
+.TextMiniDiv {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    width: 100px;
+    overflow: hidden;
+}
+.TextMiniDiv2 {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    width: auto;
+    overflow: hidden;
 }
 .MainProfileDiv
 {
@@ -1001,6 +1063,7 @@ flex-direction:column;*/
     background-color: transparent;
 /*    border-bottom: 2px solid white;*/
 }
+
 .PhotoDiv {
     width: 100%;
     /*    min-width: 200px;*/
@@ -1443,10 +1506,43 @@ flex-direction:column;*/
     font-size: 13px;
     font-family: "Venn Medium";
 }
-
+.TextField2{
+    width: 80%;
+    height: auto;
+    /*    background-color:#1b1b1b;*/
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+    font-size: 13px;
+    font-family: "Venn Medium";
+}
+.TextField3 {
+    width: 80%;
+    height: auto;
+/*        background-color:#1b1b1b;*/
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+    font-size: 13px;
+    font-family: "Venn Medium";
+    justify-content:center;
+    align-items:end;
+}
+MainProfileDiv1 {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-color: red;
+}
+.FormClass {
+/*    flex: 1;*/
+    height:100%;
+/*    background-color: rebeccapurple;*/
+    
+}
 .InputField {
-/*    background-color: #EBEBEB;*/
-/*    color: white !important;*/
+    /*    background-color: #EBEBEB;*/
+    /*    color: white !important;*/
     border: none;
     border-radius: 12px;
     padding: 10px;
@@ -1455,13 +1551,109 @@ flex-direction:column;*/
     height: 50px;
     box-sizing: border-box;
     font-size: 16px;
-    color:black;
+    color: black;
 }
-.ValidationMessage {
-    color: red;
+.InputFieldBorder {
+    /*    background-color: #EBEBEB;*/
+    /*    color: white !important;*/
+    border: none;
+    border-radius: 12px;
+    padding: 10px;
+    outline: none;
+    width: 100%;
+    height: 50px;
+    box-sizing: border-box;
+    font-size: 16px;
+    color: black;
+    margin:10px;
+    margin-left:0;
+    border: 1px solid #dbdfe4;
+}
+    .InputFieldBorder:focus {
+        border: 1px solid black;
+    }
+    .ValidationMessage {
+        color: red;
+        font-size: 13px;
+        font-family: "Venn Medium";
+    }
+
+
+
+
+
+
+.ProfileDiv {
+    width: 80%;
+    height: 90px;
+    background-color: #efefef;
+    margin-bottom:30px;
+    margin-left:10px;
+    border-radius:20px;
+    display:flex;
+    flex-direction:row;
+    justify-content:space-between;
+    align-items:center;
+    padding-left:20px;
+    padding-right:20px;
+    box-sizing:border-box;
+}
+.BlueBtnMini {
+    width: 100px;
+    height: 30px;
+    background-color: #4a5df9;
+    color: white;
+    outline: none;
+    border: 0;
+    border-radius: 10px;
+    font-size: 14px;
+    /*    font-weight: bold;*/
+    font-family: "Venn Medium";
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+}
+
+.BlueBtn {
+    width: 120px;
+    height: 40px;
+    background-color: #4a5df9;
+    color: white;
+    outline: none;
+    border: 0;
+    border-radius: 10px;
+    font-size: 14px;
+/*    font-weight: bold;*/
+    font-family:"Venn Medium";
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    padding:0;
+}
+
+
+
+.BlueBtnBig {
+    width: 200px;
+    height: 40px;
+    background-color: #4a5df9;
+    color: white;
+    outline: none;
+    border: 0;
+    border-radius: 10px;
     font-size: 13px;
+    /*    font-weight: bold;*/
     font-family: "Venn Medium";
 }
+
+
+
+
+
+
+
+
 .LogInBtn {
     width: 100%;
     border: none;
@@ -1478,7 +1670,7 @@ flex-direction:column;*/
     padding: 5px;
     margin-top: 5px;
     transition: all 0.3s ease-in-out;
-    font-size:17px;
+    font-size: 17px;
 }
     .LogInBtn:hover {
         background-color: #cc1f2a;
@@ -1659,6 +1851,11 @@ h1{
 .CustomLabel
 {
     margin-left:3px;
+}
+.CustomLabel1 {
+    margin-left: 3px;
+    color:black;
+    font-size:16px;
 }
 .CheckBoxAndPass
 {
