--- a/02_Exam_Social_Network/02_Exam_Social_Network/wwwroot/css/site.css
+++ b/02_Exam_Social_Network/02_Exam_Social_Network/wwwroot/css/site.css
@@ -30,20 +30,7 @@ body {
 body::-webkit-scrollbar{
     display:none;
 }
-.leftMenu {
-    position: fixed;
-    margin: 0px;
-    width: 250px;
-    height: 100%;
-    /*    background-color: black;*/
-    display: flex;
-    flex-direction: column;
-    border-top: 0;
-    border-left: 0;
-    border-right: 1px solid #dbdbdb;
-    border-bottom: 0;
-    z-index: 30;
-}
+
 /*.leftMenuBack {*/
 /*    position: fixed;*/
     /*margin: 0px;
@@ -58,26 +45,55 @@ body::-webkit-scrollbar{
     border-bottom: 0;*/
     /*    justify-content:*/
 /*}*/
-.FirstBlock
-{
-/*    background-color:blanchedalmond;*/
-    width:100%;
-    height:160px;
-/*    padding-left:30px;*/
-    background-position: 20% center;
-    background-repeat:no-repeat;
-    background-size: 45%;
-    background-image:url(/icons/instagramdark.png)
+#FirstBlock1 {
+    width: 100%;
+    height: 160px;
+    position:relative;
+    background-color:white;
 }
+#FirstBlock12 {
+    position: absolute;
+    /*    background-color:blanchedalmond;*/
+    width: 250px;
+    height: 100%;
+    /*    padding-left:30px;*/
+    background-position: 20% center;
+    background-repeat: no-repeat;
+    background-size: 45%;
+    background-image: url(/icons/instagramdark.png);
+    transition: all 0.2s ease-in-out;
+    opacity: 1;
+}
+#InnerInmg {
+    position:absolute;
+    top:0;
+    left:0;
+    width: 70px;
+    height: 100%;
+/*            background-color:blanchedalmond;*/
+
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: 0%;
+    background-image: url(/icons/instagramlogo.png);
+    transition: all 0.2s ease-in-out;
+}
+
+
+
+
+
+
 .SecondBlock {
-/*    background-color:black;*/
-    width:100%;
-    height:stretch;
-    padding:8px;
-    gap:8px;
-    box-sizing:border-box;
-    display:flex;
-    flex-direction:column;
+    /*    background-color:black;*/
+    width: 100%;
+    height: stretch;
+    padding: 8px;
+    gap: 8px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
 }
 .ThirdBlock {
 /*    background-color: blanchedalmond;*/
@@ -102,23 +118,43 @@ body::-webkit-scrollbar{
     justify-content:flex-start;
     box-sizing:border-box;
     background-color:white;
-    padding:20px;
+    padding: 15px;
     flex-direction:row;
+/*    justify-content:center;*/
     text-decoration:none;
+    overflow:hidden;
 
 }
+#leftMenu1 {
+    position: fixed;
+    margin: 0px;
+    width: 250px;
+    height: 100%;
+    /*    background-color: black;*/
+    display: flex;
+    flex-direction: column;
+    border-top: 0;
+    border-left: 0;
+    border-right: 1px solid #dbdbdb;
+    border-bottom: 0;
+/*    z-index: 30;*/
+    overflow: hidden;
+    z-index: 201;
+    transition: all 0.3s ease-in-out;
+}
+.buttonimg {
+    width: 25px;
+    height: 25px;
+/*    margin:auto auto;*/
+    margin-right:10px;
+}
+
 a {
     text-decoration: none;
 }
 .buttondef:hover {
     transition: background-color 0.3s linear;
     background-color: #f2f2f2;
-}
-.buttonimg
-{
-    width:25px;
-    height:25px;
-    margin-right:10px;
 }
 
 .container {
@@ -535,8 +571,8 @@ a {
     top: 50%;
     left: 50%;
     opacity: 1;
-    z-index: 11;
-    background-color: #262626;
+    z-index: 300;
+    background-color: white;
     border-radius: 30px;
     overflow:hidden;
     gap:0px;
@@ -548,18 +584,19 @@ a {
         height: 50px;
         right: 0px;
     }
+
 .pointMenu1 {
-    z-index: 10;
+    z-index: 300;
     width: 100vw;
     height: 100vh;
     background-color: rgba(4, 4, 4, 0.45);
     position: fixed;
-    top:0;
-    left:0;
-    display:none;
+    top: 0;
+    left: 0;
+    display: none;
 }
 .pointMenu2 {
-    z-index: 10;
+    z-index: 300;
     width: 100vw;
     height: 100vh;
     background-color: rgba(4, 4, 4, 0.45);
@@ -574,10 +611,10 @@ a {
     /*    border-radius: 30px;*/
     border: 0;
     background-color: #262626;
-    border-bottom: 0.5px solid #363636;
+    border-bottom: 0.5px solid #dbdbdb;
     outline: none;
     margin: 0px;
-    color: #eeeeee;
+    color: black;
     font-size: 13px;
     font-family: "Kanit", sans-serif;
     font-weight: 300;
@@ -585,17 +622,18 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: white;
 }
 .poindInBtnBack {
     width: 100%;
     height: 50px;
     /*    border-radius: 30px;*/
     border: 0;
-    background-color: #262626;
+    background-color: white;
     /*    border-bottom: 0.5px solid #363636;*/
     outline: none;
     margin: 0px;
-    color: #eeeeee;
+    color: black;
     font-size: 13px;
     font-family: "Kanit", sans-serif;
     font-weight: 300;
@@ -609,8 +647,8 @@ a {
     height: 50px;
     /*    border-radius: 30px;*/
     border: 0;
-    background-color: #262626;
-    border-bottom: 0.5px solid #363636;
+    background-color: white;
+    border-bottom: 0.5px solid #dbdbdb;
     outline: none;
     margin: 0px;
     color: #ed4956;
@@ -635,10 +673,11 @@ a {
     left: 50%;
     opacity: 1;
     z-index: 11;
-    background-color: #262626;
+    background-color: white;
     border-radius: 30px;
     overflow:hidden;
     display:flex;
+    color:black;
     flex-direction:column;
     justify-content:center;
     align-items:center;
@@ -648,15 +687,15 @@ a {
 .UpMenuDiv {
     width: 100%;
     height: 40px;
-    background-color: black;
-    border-bottom: 1px solid #363636;
+    background-color: white;
+    border-bottom: 1px solid #dbdbdb;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    
     align-items: center;
     font-family: "Kanit", sans-serif;
     font-weight: 400;
+    color: black;
 }
 
 .fileuploadcl {
@@ -674,7 +713,7 @@ a {
     outline:none;
     background-color:transparent;
     border:0;
-    color:white;
+    color:black;
     font-size:15px;
 }
     .enterclass::-webkit-scrollbar {
@@ -709,7 +748,7 @@ a {
     font-weight: 300;
     font-size: 14px;
     background-color: #4a5df9;
-    color: black;
+    color: white;
     border: 0;
     outline: none;
 }
@@ -722,6 +761,7 @@ a {
     font-weight: 300;
     display:block;
 }
+
 .createdivaddafter {
     position: absolute;
     width: 800px;
@@ -766,6 +806,7 @@ a {
     flex-direction: row;
     justify-content: start;
     align-items: center;
+    background-color:white;
     /*    background-image: url()*/
 }
 .imageOverflow
@@ -790,33 +831,36 @@ a {
 /*    background-color:black;*/
 }
 
-.ColumnDiv
-{
-    width:stretch;
-
-    display:flex;
-    flex-direction:column;
-/*    background-color:blue;*/
-    height:stretch;
-    justify-content:center;
-    align-content:center;
-/*    margin:0px;
+.ColumnDiv {
+    width: stretch;
+    display: flex;
+    flex-direction: column;
+    /*    background-color:blue;*/
+    height: stretch;
+    justify-content: center;
+    align-content: center;
+    /*    margin:0px;
     margin-left:100px;*/
 }
+
 .rightMenu {
     /*    width: 700px;*/
-/*            background-color: red;*/
+    /*            background-color: red;*/
     margin: 0px;
-    display:flex;
-    flex:1;
-    height:500px;
-    flex-direction:column;
-
-    justify-content:flex-start;
-    gap:0;
+    display: flex;
+    flex: 1;
+    height: 500px;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 0;
     /*    gap: 10px;*/
     /*display:flex;
 flex-direction:column;*/
+}
+
+.Recom {
+    /*    background-color: red;*/
+    gap: 0;
 }
 .profileMini
 {
@@ -833,14 +877,30 @@ flex-direction:column;*/
     margin-top:30px;
 
 }
-.ImgDivMin
+.OpacityP
 {
-    width:50px;
-    height:50px;
-/*    background-clip:border-box;*/
-    overflow:hidden;
-    border-radius:50%;
-    
+    transition:all 0.3s ease-in-out;
+}
+.profileMini1 {
+    display: flex;
+    flex-direction: row;
+    /*    gap:10px;*/
+    margin-bottom: 10px;
+    /*    background-color:red;*/
+    align-items: center;
+    /*    flex:1;*/
+
+    width: 100%;
+    height: 60px;
+    /*    margin-top: 30px;*/
+}
+
+.ImgDivMin {
+    width: 50px;
+    height: 50px;
+    /*    background-clip:border-box;*/
+    overflow: hidden;
+    border-radius: 50%;
 }
 .ImgMini {
     width: 100%;
@@ -1160,21 +1220,22 @@ margin:0;
     left: 17%;
     right: 17%;
     bottom: 3%;
-    background-color: #212328;
-    border-radius: 3px;
+    background-color: white;
+    border-radius: 4px;
     display:flex;
     flex-direction:row;
+    overflow:hidden;
 }
-.Img2
-{
-    width:100px;
+
+.Img2 {
+    width: 100px;
 }
 .MainImgdivPartial {
     width: 500px;
     height: 100%;
-    background-color: darkgrey;
+    background-color: white;
     border-radius: 3px;
-/*    margin-top: 5px;*/
+    /*    margin-top: 5px;*/
     display: flex;
     flex-direction: row;
     position: relative;
@@ -1197,7 +1258,7 @@ margin:0;
     bottom: 0;
     right: 0;
     background-color: rgba(4, 4, 4, 0.6);
-    z-index:25;
+    z-index:300;
 }
 
 .showPartical {
@@ -1221,21 +1282,21 @@ margin:0;
 .FirstRowBllock {
     width: 100%;
     height: 60px;
-    background-color: #212328;
-    border-bottom: 1px solid #2b3036;
-    display:flex;
-    align-items:center;
-    box-sizing:border-box;
-    padding-left:10px;
+    background-color: white;
+    border-bottom: 1px solid #efefef;
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    padding-left: 10px;
 }
 .SecondRowBllock {
     /*    width: 100%;*/
     flex: 1;
-    background-color: #212328;
-    border-bottom: 1px solid #2b3036;
-    height:350px;
-    overflow-y:auto;
-    overflow-x:hidden;
+    background-color: white;
+    border-bottom: 1px solid #efefef;
+    height: 350px;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 .SecondRowBllock::-webkit-scrollbar
 {
@@ -1244,8 +1305,8 @@ margin:0;
 .ThirdRowBllock {
     width: 100%;
     height: 80px;
-    background-color: #212328;
-    border-bottom: 1px solid #2b3036;
+    background-color: white;
+    border-bottom: 1px solid #efefef;
 }
 
 .firstblockphoto {
@@ -1318,6 +1379,7 @@ margin:0;
     font-size: 14px;
     font-weight: 300;
     margin-left:10px;
+    color:black;
 }
 
 .fontMax2 {
@@ -1331,7 +1393,7 @@ margin:0;
 .FourRowBllock {
     width: 100%;
     min-height: 50px;
-    background-color: #212328;
+    background-color: white;
     padding-left: 15px;
     box-sizing: border-box;
     display: flex;
@@ -1343,7 +1405,7 @@ margin:0;
     flex: 1;
     font-family: 'Venn Trial', sans-serif;
     font-size: 13px;
-    background-color: #212328;
+    background-color: white;
     outline: none;
     border: 0;
     display: flex;
@@ -1361,21 +1423,21 @@ margin:0;
     width: auto;
     height: 100%;
     padding: 10px;
-/*    font-weight: bold;*/
+    /*    font-weight: bold;*/
     box-sizing: border-box;
-    background-color:transparent;
+    background-color: transparent;
     display: flex;
     justify-content: center;
-    color:white;
-    outline:none;
-    border:0;
+    color: #3143e3;
+    outline: none;
+    border: 0;
     align-items: center;
 }
-.FormFlex
-{
-    display:flex;
-    flex-direction:row;
-    width:100%;
+
+.FormFlex {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
 }
 .ComentBlock {
     width: 100%;
@@ -1388,6 +1450,7 @@ margin:0;
     align-items: center;
 /*    gap: 10px;*/
     font-family: "Venn Medium";
+    color:black;
 }
 
 .NickNameP {
@@ -1395,6 +1458,7 @@ margin:0;
     font-family: 'Venn Trial', sans-serif;
     font-size: 14px;
     margin: 0;
+    color: black;
 }
 
 .NickNameM1 {
@@ -1420,17 +1484,18 @@ margin:0;
     white-space:normal;
     overflow-wrap:break-word;
 }
+
 .ImgDivPost2 {
     width: 38px;
     box-sizing: border-box;
     height: 38px;
-/*        background-color: red;*/
+    /*        background-color: red;*/
     border-radius: 50%;
     overflow: hidden;
     margin: 0px;
     /*    margin-top:3px;*/
     /*    margin:10px;*/
-/*    margin-left: 5px;*/
+    /*    margin-left: 5px;*/
 }
 .ComentBlockFirts
 {
@@ -1475,13 +1540,17 @@ margin:0;
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 99;
+    z-index: 350;
     display: flex;
     flex-direction: row;
     background-repeat: no-repeat;
     background-size: cover;
     /*    background-size: 300px;*/
     background-image: linear-gradient(to right,rgba(0,0,0,0.4), rgba(0,0,0,0.2)),url("https://images.unsplash.com/photo-1620121692029-d088224ddc74?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fGFic3RyYWN0JTIwYmx1ZXxlbnwwfHwwfHx8MA%3D%3D");
+}
+#forgot-password:hover
+{
+    text-decoration:underline;
 }
 
 .BackText {
@@ -1599,7 +1668,7 @@ MainProfileDiv1 {
     box-sizing:border-box;
 }
 .BlueBtnMini {
-    width: 100px;
+    width: auto;
     height: 30px;
     background-color: #4a5df9;
     color: white;
@@ -1612,11 +1681,29 @@ MainProfileDiv1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.GrayBtnMini {
+    width: auto;
+    height: 30px;
+    background-color: #f0f2f5;
+    color: #0c1014;
+    outline: none;
+    border: 0;
+    border-radius: 10px;
+    font-size: 14px;
+    /*    font-weight: bold;*/
+    font-family: "Venn Medium";
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .BlueBtn {
-    width: 120px;
+    width: auto;
     height: 40px;
     background-color: #4a5df9;
     color: white;
@@ -1624,12 +1711,14 @@ MainProfileDiv1 {
     border: 0;
     border-radius: 10px;
     font-size: 14px;
-/*    font-weight: bold;*/
-    font-family:"Venn Medium";
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    padding:0;
+    /*    font-weight: bold;*/
+    font-family: "Venn Medium";
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 
@@ -1795,6 +1884,7 @@ MainProfileDiv1 {
     gap: 0;
     backdrop-filter: blur(10px);
 }
+
 .BallMouse {
     /*    position:absolute;*/
     /*    z-index:110;*/
@@ -1887,17 +1977,73 @@ h1{
 {
     color:white;
 }
-.ImageDiv {
-    flex: 1;
-    margin: 20px;
-    border-radius: 30px;
-    background-color: #3656fb;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: 90%;
-    background-image: url(https://imgv3.fotor.com/images/share/Edit-photos-for-Instagram-effortlessly-with-Fotors-free-online-Instagram-photo-editor.jpg)
-}
+    .createa:hover
+    {
+        text-decoration:underline;
+    }
+    .ImageDiv {
+        flex: 1;
+        margin: 20px;
+        border-radius: 30px;
+        background-color: #3656fb;
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: 90%;
+        background-image: url(https://imgv3.fotor.com/images/share/Edit-photos-for-Instagram-effortlessly-with-Fotors-free-online-Instagram-photo-editor.jpg)
+    }
 #registerSubmit
 {
     margin-top:20px;
+}
+#ParitalBack {
+    position: fixed;
+    top: 0;
+    left: 70px;
+    background-color: white;
+    width: 0px;
+    z-index: 10;
+    height: 100%;
+    /*    transition: box-shadow 1s ease-in-out;*/
+    transition: width 0.3s ease-in-out,0.3s box-shadow 0.1s ease-in-out;
+    
+    box-shadow: 10px 0 15px rgba(0, 0, 0, 0.1);
+    border-radius: 0px 20px 20px 0;
+    overflow:hidden;
+}
+.InputDiv {
+    width: 100%;
+    height: 22%;
+    border-bottom: 1px solid #efefef;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    box-sizing: border-box;
+    padding: 15px;
+/*    background-color: red;*/
+    z-index: 0;
+    
+}
+
+.BlackSearch {
+    font-family: "Venn Medium";
+    font-size: 25px;
+    z-index: 0;
+}
+.InputSearch {
+    width: stretch;
+    height: 40px;
+    border-radius:5px;
+    box-sizing:border-box;
+    padding:10px;
+    margin: 0px;
+    border: 0;
+    outline: none;
+    background-color: #efefef;
+    font-size:17px;
+}
+#MyImgAdd
+{
+    width:150px;
+    height:150px;
 }
